Further cleanup